# amslint

./: .coverage  .editorconfig  .flake8  .gitignore  LICENSE  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: main.yml  tests.yml
basic/: basic.aimms
basic/MainProject/: Project.xml  basic.ams  basic.nch
basic/MainProject/Settings/: Options.txt
basic/log/: aimms.err
poc/: ams.ams  test2.py  test3.py
script/: bump_changelog.py
src/: ConvertAMS2RST.py  functions.py  test2.py
src/amslint/: constants.py  exceptions.py  initialTests.py  out.json  style_guide.py  test3.py
src/amslint/lint/: linter.py  lintermanager.py
src/amslint/main/: __init__.py  application.py
src/amslint/messages/: channel.py  errorcodes.py  handler.py  message.py  protocol.py
src/amslint/preprocessing/: amsfile.py
src/amslint/reports/: handlers.py
src/amslint/utils/: buildingblocks.py
tests/: conftest.py
tests/acceptance/: test_acceptance.py  test_stdlib.py
tests/linter/: test_identifierlinter.py
tests/messages/: test_handler.py
tests/preprocessing/: test_amsfile.py
tests/reader/: test_buildingblock.py
tests/reports/: test_annotaion.py  test_message.py  test_report.py
tests/test_files/: test_file.ams  test_file_2.ams
