[metadata]
name = amslint
author = Rodrigo Mendonça
author_email = rodrigogr.mendonca@gmail.com
description = ams linter
long_description = file:README.rst
url = https://github.com/ro-56/amslint
classifiers =
	Development Status :: 1 - Planning
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find_namespace:
include_package_data = true
python_requires = >=3.8
install_requires =
# package_dir = 
# 	=src

[options.packages.find]
exclude =
	build*
	dist*
	docs*
	tests*

[options.extras_require]
testing =
	# upstream
	pytest>=6
	pytest-checkdocs>=2.4
	pytest-flake8>=3.9
	pytest-black>=0.3.7
	pytest-cov>=3.0
	pytest-mypy>=0.910
	tox>=3.24
	
	# local

docs =
	# upstream
	sphinx
	rst.linker >= 1.9

	# local

[options.entry_points]
